@@ -180,7 +180,7 @@ Table of contents</h2>
     object bounding box [[!SVG11]], if the element does not have
     an associated CSS layout box and is in the <code>http://www.w3.org/2000/svg</code> namespace
     (See <a href="http://www.w3.org/TR/cssom-view/#dom-element-getboundingclientrect">getBoundingClientRect</a>
-    [<a href="#ref-CSSOM">CSSOM</a>]).
+    [[CSSOM-VIEW]]).
   </p>
 </dd>
 <dt id="TermLocalCoordinateSystem"><dfn>local coordinate system</dfn></dt>
