@@ -377,7 +377,8 @@
      element does not have an associated CSS layout box and is in the
      <code>http://www.w3.org/2000/svg</code> namespace (See <a
      href="http://www.w3.org/TR/cssom-view/#dom-element-getboundingclientrect">getBoundingClientRect</a>
-     [<a href="#ref-CSSOM">CSSOM</a>]).
+     <a href="#CSSOM-VIEW"
+     rel=biblioentry>[CSSOM-VIEW]<!--{{CSSOM-VIEW}}--></a>).
 
    <dt id=TermLocalCoordinateSystem><dfn id=local-coordinate-system>local
     coordinate system</dfn>
@@ -4101,6 +4102,16 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
     Backgrounds and Borders Module Level 3.</cite></a> 24 July 2012. W3C
     Candidate Recommendation. (Work in progress.) URL: <a
     href="http://www.w3.org/TR/2012/CR-css3-background-20120724/">http://www.w3.org/TR/2012/CR-css3-background-20120724/</a>
+   </dd>
+   <!---->
+
+   <dt id=CSSOM-VIEW>[CSSOM-VIEW]
+
+   <dd>Anne van Kesteren. <a
+    href="http://www.w3.org/TR/2011/WD-cssom-view-20110804/"><cite>CSSOM View
+    Module.</cite></a> 4 August 2011. W3C Working Draft. (Work in progress.)
+    URL: <a
+    href="http://www.w3.org/TR/2011/WD-cssom-view-20110804/">http://www.w3.org/TR/2011/WD-cssom-view-20110804/</a>
    </dd>
    <!---->
   </dl>
