@@ -1,4 +1,7 @@
 2012-10-21 dschulze@adobe.com
+	Add CSSOM-VIEW to other references section.
+
+2012-10-21 dschulze@adobe.com
 	Add DOM interfaces for 'mask' and 'clipPath'.
 
 2012-10-19 dschulze@adobe.com
